fix url/uri issues with shapefiles with spaces in the names